test: configure jvm args and output logging